Fix homepage scrollbar

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,5 +5,5 @@ footer {
     color: var(--faded);
     bottom: 0;
     left: 0;
-    padding: 40px 0;
+    padding: 20px 0;
 }
